@@ -2310,6 +2310,7 @@ Gaurav Kulshreshtha <gaurav dot kulshreshtha at onmobile dot com>
 Wolfgang Pickartz <Wolfgang dot Pickartz at procom.de>
 Joost Kraaijeveld <J dot Kraaijeveld at Askesis dot nl>
 Pau Garcia i Quiles <pgquiles at elpauer dot org>
+<sailzeng at tencent dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
